welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:-7: error: not found: value blueTicket
 val res = blueTicket( t.getParameter(0).asInstanceOf[Int], t.getParameter(1).asInstanceOf[Int], t.getParameter(2).asInstanceOf[Int]);
           ^blueTicket:1: error: not found: value int
int blueTicket(int a, int b, int c) {
^blueTicket:1: error: not found: value int
int blueTicket(int a, int b, int c) {
               ^blueTicket:1: error: not found: value int
int blueTicket(int a, int b, int c) {
                      ^blueTicket:1: error: not found: value int
int blueTicket(int a, int b, int c) {
                             ^blueTicket:2: error: not found: value a
  if (a+b==10 || a+c==10 || b+c==10) {
      ^blueTicket:2: error: not found: value b
  if (a+b==10 || a+c==10 || b+c==10) {
        ^blueTicket:2: error: not found: value a
  if (a+b==10 || a+c==10 || b+c==10) {
                 ^blueTicket:2: error: not found: value c
  if (a+b==10 || a+c==10 || b+c==10) {
                   ^blueTicket:2: error: not found: value b
  if (a+b==10 || a+c==10 || b+c==10) {
                            ^blueTicket:2: error: not found: value c
  if (a+b==10 || a+c==10 || b+c==10) {
                              ^blueTicket:3: error: return outside method definition
    return 10
    ^blueTicket:4: error: not found: value a
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
              ^blueTicket:4: error: not found: value b
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                ^blueTicket:4: error: not found: value b
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                      ^blueTicket:4: error: not found: value c
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                        ^blueTicket:4: error: not found: value a
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                            ^blueTicket:4: error: not found: value b
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                              ^blueTicket:4: error: not found: value a
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                    ^blueTicket:4: error: not found: value c
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                      ^blueTicket:4: error: not found: value b
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                           ^blueTicket:4: error: not found: value c
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                             ^blueTicket:4: error: not found: value b
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                   ^blueTicket:4: error: not found: value a
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                     ^blueTicket:4: error: not found: value b
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                          ^blueTicket:4: error: not found: value c
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                            ^blueTicket:4: error: not found: value a
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                  ^blueTicket:4: error: not found: value c
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                    ^blueTicket:4: error: not found: value a
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                         ^blueTicket:4: error: not found: value c
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                           ^blueTicket:4: error: not found: value a
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                                 ^blueTicket:4: error: not found: value b
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                                   ^blueTicket:4: error: not found: value b
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                                        ^blueTicket:4: error: not found: value c
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                                          ^blueTicket:4: error: not found: value a
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                                                ^blueTicket:4: error: not found: value c
  } else if ((a+b==10+b+c ||a+b==10+a+c)||(b+c==10+b+a || b+c==10+a+c)||(a+c==10+a+b || b+c==10+a+c)){
                                                                                                  ^blueTicket:5: error: return outside method definition
    return 5
    ^blueTicket:7: error: return outside method definition
    return 0
    ^